--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Produce</title>
 </head>
 <body>
-    <h1>自己紹介</h1>
+    <header>自己紹介</header>
+
+    <div class="flax">
+        <div>Hobby</div>
+        <div>Reserch</div>
+
+    </div>
 
 </body>
 </html>
